src/theme-gcwu-fegc/sass/includes/default-mobile.scss
@charset "utf-8";
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * www.tbs.gc.ca/ws-nw/wet-boew/terms / www.sct.gc.ca/ws-nw/wet-boew/conditions
 */
body{
	-webkit-text-size-adjust:none;
	font-family:Verdana, Arial, Helvetica, sans-serif;
	font-size:80%;
	color:#333;
}

/* Override jQuery Mobile hiding of content on mobile loading to eliminate white flicker */
.ui-mobile-rendering > * {
	visibility: visible !important;
}

#wb-skip {
	display:none;
	visibility:hidden;
}

#gcwu-psnb,#gcwu-srchbx{
	h2 a{
		color:#fff;
		text-decoration:none;
	}
}

#wb-head #gcwu-wmms{
	clip:rect(1px, 1px, 1px, 1px);
	height:0 !important;
	overflow:hidden !important;
	position:absolute;
	width:0 !important;
	margin:0 !important;
}

#wb-body,#wb-body-sec{
	background:#fff !important;
}

#gcwu-title{
	min-height:40px;
	font-weight:700;
	background:#146094 url(../images/bg-waves.jpg);
	padding:2px 10px;
	a{
		font-size:1.5em;
		color:#fff !important;
		text-shadow:0 1px 1px #044062;
		text-decoration:none;
	}
}

#wb-foot #gcwu-wmms img{
	margin: 5px auto;
}

#gcwu-sig{
	float:left;
	margin:0 0 5px 10px;
}

#gcwu-date-mod{
	float:right;
	margin:5px 10px;
}

#gcwu-priorities li{
	text-align:center;
}

.span-1 img{
	width:100px;
	padding:0 10px;
}

[class*="span-"]{
	position:relative;
}

.border-span-1,.border-span-2,.border-span-3,.border-span-4,.border-span-5,.border-span-6,.border-span-7,.border-span-8,.border-span-9,.border-span-10,.border-span-11,.border-span-12{
	.background-light,.background-dark,.background-accent{
		border-radius:3px;
		-moz-border-radius:3px;
		-webkit-border-radius:3px;
	}
}

#wb-body-sec #wb-core .grid-12 .border-span-1,.grid-12 .border-span-1,.border-span-1,#wb-body-sec #wb-core .grid-12 .border-span-2,.module-versatile,.grid-12 .border-span-2,.module-versatile,#wb-body-sec #wb-core .grid-12 .border-span-3,.border-span-2,.module-versatile,#wb-body-sec #wb-core .grid-12 .border-span-4,.grid-12 .border-span-3,#wb-body-sec #wb-core .grid-12 .border-span-5,.grid-12 .border-span-4,.border-span-3,#wb-body-sec #wb-core .grid-12 .border-span-6,.grid-12 .border-span-5,#wb-body-sec #wb-core .grid-12 .border-span-7,.border-span-4,.module-table-contents,.module-welcomepage,#wb-body-sec #wb-core .grid-12 .border-span-8,.grid-12 .border-span-6,#wb-body-sec #wb-core .grid-12 .border-span-9,.grid-12 .border-span-7,.border-span-5,#wb-body-sec #wb-core .grid-12 .border-span-10,.grid-12 .border-span-8,#wb-body-sec #wb-core .grid-12 .border-span-11,.border-span-6,#wb-body-sec #wb-core .grid-12 .border-span-12,.grid-12 .border-span-9,.grid-12 .border-span-10,.border-span-7,.grid-12 .border-span-11,.border-span-8,.grid-12 .border-span-12,.gcwu-minister{
	border:1px solid #ccc;
	padding:2px;
}

#wb-main-in {
	padding-left:5px;
	padding-right:5px;
	h1{
		position:static !important;
		font-size:1.1em;
		width:auto !important;
		background:#111;
		background:-webkit-linear-gradient(#3C3C3C, #111111) #111111;
		background:-moz-linear-gradient(#3C3C3C, #111111) #111111;
		border-bottom:1px solid #2A2A2A;
		border-top:1px solid #2A2A2A;
		color:#FFF;
		font-weight:700;
		text-shadow:0 -1px 1px #000;
		border-radius:3px;
		margin-top:5px;
		padding:10px;
	}
	.ui-link {
		color: #326CA6;
		font-weight:bold;
		&:hover,&:focus,&:active {
			color: #124C86;
		}
	}
	.span-1,.span-2,.span-3,.span-4,.span-5,.span-6,.span-7,.span-8,.span-9,.span-10,.span-11,.span-12{
		margin-bottom:20px;
	}
}

.ui-mobile #wb-main-in h1{
	margin-bottom:0 !important;
}

h2,h3,h4,h5,h6,p,blockquote,table,form,img,pre{
	margin-left:0;
	margin-right:0;
	text-shadow:none;
}

.clear{
	clear:both;
	display:block;
	height:0;
	overflow:hidden;
	visibility:hidden;
	width:0;
	margin:0;
}

.ui-mobile {
	input{
		&[type="submit"],&[type="reset"],&[type="button"]{
			background:none;
			border:none;
		}
	}
	#gcwu-srch{
		box-shadow:none;
	}
	#wb-sec{
		display:none;
	}
	.ui-content{
		padding:0 15px;
	}
	.wet-boew-menubar a{
		padding:0;
	}
}

#gcwu-tctr {
	.gcwu-tc{
		border-right:1px solid #999;
		padding:0 9px 0 0;
	}
	.gcwu-tr{
		padding-left:6px;
	}
	li{
		display:inline;
	}
}

li#gcwu-gcft-ca a{
	padding-left:0;
	padding-right:0;
	font-size:1.35em;
	font-weight:700;
}

#gcwu-gcft {
	background:none repeat scroll 0 0 #040707;
	clear:both;
	margin:0;
	padding:10px;
	li{
		width:50%;
		float:left;
		margin:10px 0;
		&#gcwu-gcft-ca{
			margin-right:0;
			float:left;
		}
		&#gcwu-gcft-ca div{
			text-align:left;
		}
	}
	a{
		color:#fff !important;
		font-size:0.9em;
		text-shadow:none;
		span{
			font-weight:700;
			font-size:1.1em;
		}
	}
}

img{
	max-width:100%;
	height:auto;
	display:block;
}

#gcwu-gcnb-fip {
	li{
		display:none;
		padding-bottom:5px;
	}
	#gcwu-gcnb-lang{
		display:inline;
		float:right;
	}
}

#gcwu-gcnb-lang a{
	color:#222;
	text-decoration:none;
	background:#eee;
	border:1px solid #ddd;
	border-radius:2px;
	float:right;
	font-weight:400;
	padding:3px;
}

#gcwu-srch-submit{
	min-height:22px;
	display:inline;
	margin:0;
}

#gcwu-psnb,#gcwu-srchbx{
	width:50%;
	float:right;
	border-top:1px solid #044062;
	h2 {
		text-shadow:0 1px 1px #044062;
		border-right:#15598F;
		background:#4E7EB7;
		background-image:-webkit-gradient(linear,left top,left bottom,from(#5383BC),to(#225C96));
		background-image:-webkit-linear-gradient(#5383BC,#225C96);
		background-image:-moz-linear-gradient(#5383BC,#225C96);
		background-image:-ms-linear-gradient(#5383BC,#225C96);
		background-image:-o-linear-gradient(#5383BC,#225C96);
		background-image:linear-gradient(#5383BC,#225C96);
		color:#fff;
		text-align:center;
		font-size:1em;
		text-transform:xxxcapitalize;
		position:relative;
		font-weight:700;
		margin:0;
		padding:0.7em 18px 0.8em 0;
		border-top:1px solid #8fb9d6;
		border-bottom:1px solid #044062;
		border-left:1px solid #124B79;
		border-right:none;
	}
}

#gcwu-srchbx h2{
	padding-right:20px;
}

#gcwu-bnr-in .ui-mini .ui-btn-inner {
	font-size:1em;
}

.wet-boew-menubar {
	a{
		border-top:1px solid #ccc;
		border-bottom:1px solid #ccc;
		color:#222;
		text-decoration:none;
		display:block;
		position:relative;
		z-index:200;
		font-weight:700;
		text-align:center;
		background:#eee;
		padding:0.8em 0 0.9em;
	}
	ul{
		list-style-type:none;
		position:relative;
		z-index:1;
		margin:0;
		padding:0;
	}
	li{
		color:#333;
		text-shadow:0 1px 0 #fff;
		position:relative;
		z-index:1;
		h3{
			font-weight:400;
			font-size:1em;
			margin:0;
			padding:0;
		}
	}
}

#gcwu-bnr,#wb-core{
	clear:both;
}

#gcwu-bnr{
	background:#4E7EB7;
	background: -moz-linear-gradient(#5383B7, #225C96) repeat scroll 0 0 #4E7EB7;
	background:-webkit-linear-gradient(#5383B7, #225C96) repeat scroll 0 0 #4E7EB7;
}

#gcwu-priorities ul,#gcwu-date-mod,#gcwu-gcft ul,#wb-head{
	&:after{
		content:".";
		display:block;
		height:0;
		clear:both;
		visibility:hidden;
	}
}

.wet-boew-menubar li .mb-sm,#gcwu-bc,#gcwu-psnb #gcwu-psnb-in,#gcwu-srchbx form,.wet-boew-menubar li .mb-sm *{
	display:none;
}

#gcwu-srch-submit{
	min-height: 22px;
}

.ui-content .ui-listview {
    margin: 0 -15px;
}

.ui-collapsible-heading, .ui-li-static {
	font-size:1em;
	margin:0;
}

.ui-dialog h1 {
	border-bottom: none;
}

#jqm-wb-mb, #jqm-wb-search {
	.ui-bar-a h1 {
		color: #fff;
	}
}

#jqm-wb-mb {
	a:link{
		text-decoration: none
	}
	h3.top-section{
		font-size:1.2em;
	}
	.ui-content .ui-listview{
		margin:0;
	}
	.ui-btn-inner{
		white-space:normal;
	}
	.ui-btn-icon-top .ui-btn-inner{
		padding:0.6em 33px 0.7em 10px;
	}
	.ui-btn-icon-right .ui-btn-inner {
		padding-left: 40px;
	}
	.ui-body-a {
		background: #FFF;
	}
	.ui-collapsible .ui-collapsible-content {
		padding-top: 5px;
		padding-bottom: 5px;
	}
	.ui-li-static {
		border-left: none; border-right: none;
	}
	.ui-btn{
		margin:0;
		text-align:left;
	}
	.ui-li{
		padding: 0;
		border-width:1px 1px 0 1px;
	}
	.ui-corner-bottom {
		border-bottom-width:1px;
	}
	h1{
		border-bottom:none;
	}
	h2{
		color:#555;
	}
	div.ui-collapsible-set + h2{
		border-top:3px groove #fff;
		padding-top:8px;
		margin-top:23px;
	}
	.ui-content h2 + ul.ui-listview{
		margin-bottom:1em;
	}
	.top-section a{
		margin:0 0 5px;
		border-radius:0;
		-moz-border-radius:0;
		-webkit-border-radius:0;
	}
	.top-level.ui-btn-corner-all {
		border-radius:0.6em;
	}
	#gcwu-bc-in {
		background:#DFDFDD;
		background:-webkit-linear-gradient(#F0EFEF, #DFDFDD) #DFDFDD;
		background:-moz-linear-gradient(#F0EFEF, #DFDFDD) #DFDFDD;
		color: #555;
		border-radius:0;
		-moz-border-radius:0;
		-webkit-border-radius:0;
		text-shadow:0 1px 1px #fff;
		border-bottom:1px solid #ccc;
		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
		a {
			color: #326CA6;
			text-decoration: none;
			border-radius:0;
			-moz-border-radius:0;
			-webkit-border-radius:0;
			&:hover,&:active{
				text-decoration:underline;
			}
		}
		li {
			background: url(../images/bcrumb-mobile.png) no-repeat right center;
			display: inline;
			float: left;
			margin: 0;
			padding: 5px 12px 5px 5px;
			border-radius:0;
			-moz-border-radius:0;
			-webkit-border-radius:0;
			&:last-child {
				background-image: none;
				padding-left:5px;
			}
		}
		ol {
			line-height: 1.57em;
			list-style-type: none;
			margin: 0;
			padding: 0;
			font-size:90%;
			&:after {
				clear: both;
				content: ".";
				display: block;
				height: 0;
				visibility: hidden;
			}
		}
	}
}

#jqm-mb-location-text {
	margin:0 -15px 10px;
	h2{
		display:none;
	}
}

.mobile-hide{
	display:none !important;
}

.mobile-show{
	display:block !important;
}

a:active{
	text-decoration:underline !important;
}

.ui-loader-default h1{
    margin:0;
    padding:0;
    border:0;
}

.no-js {
	#gcwu-sft{
		background:#eee;
		border-top:1px solid #ccc;
		padding:10px 10px 25px;
	}
	#wb-foot {
		a{
			font-weight:400;
			text-decoration:none;
		}
		ul{
			list-style-type:none;
			margin:0;
		}
	}
	#gcwu-srch{
		margin-top:3px;
		padding:3px 0;
	}
	#gcwu-psnb:hover #gcwu-psnb-in,#gcwu-srchbx:hover form{
		display:block;
		position:absolute;
		right:0;
		left:0;
		width:100%;
		margin-bottom:50px;
		z-index:100;
	}
	#gcwu-psnb {
		li{
			border: 1px solid #222;
		}
		a{
			color:#222;
			padding: 0.45em 0.79em;
		}
	}
	#gcwu-srchbx:hover form{
		border-bottom:1px solid #999;
		text-align:center;
		background:#ccc;
		padding:10px 0;
	}
	#gcwu-sft-in {
		section:nth-child(3n-1),div:nth-child(3n-1){
			clear:both;
		}
		div{
			width:50%;
			float:left;
		}
	}
	#gcwu-sft{
		&:after{
			content:".";
			display:block;
			height:0;
			clear:both;
			visibility:hidden;
		}
		a,.link{
			color:#222;
		}
	}
	.ui-content{
		padding:0;
	}
	#wb-sec{
		padding:0 5px;
	}
	.wb-sec-def {
		h3.top-section {
			a{
				color:#FFF;
				background:#23447e;
				padding-top:5px;
				padding-bottom:5px;
				font-size:1.1em;
				&:hover,&:focus,&:active{
					color:#FFF;
					text-decoration:underline;
				}
				&.nav-current{
					color:#FFF;
					padding-top:4px;
					padding-bottom:4px;
					background:#0f315b;
				}
			}
		}
		h3,h4,.top-level{
			font-size:100%;
			border-bottom:none;
			border-radius:2px;
			-moz-border-radius:2px;
			-webkit-border-radius:2px;
			margin:0 0 3px;
			a{
				font-weight:700;
				background:#DDD;
				padding:2px 4px;
				&.nav-current{
					color:#0F315B;
					padding:1px 3px;
				}
			}
		}
		li{
			a{
				padding:4px 5px;
				&.nav-current{
					color:#0F315B;
					padding:3px 4px;
				}
			}
			li{
				margin-left:0;
				border:none;
				list-style-type:none;
				padding:0;
			}
		}
		a.nav-current{
			border:1px solid #777;
			border-radius:2px;
			-moz-border-radius:2px;
			-webkit-border-radius:2px;
		}
		h3,h4,.top-level,li{
			a{
				display:block;
				color:#333;
				text-decoration:none;
				&:hover,&:focus,&:active{
					color:#333;
					text-decoration:underline;
				}
			}
		}
		ul{
			list-style-type:none;
			margin:0 0 6px;
			padding:0;
			ul{
				list-style-type:none;
				margin-left:10px;
				padding-left:5px;
				border-left:1px solid #ccc;
			}
		}
	}
	.mobile-pe{
		display:none !important;
	}
}

